// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-stylus > should add stylus loader config correctly 1`] = `
[
  {
    "dependency": {
      "not": "url",
    },
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": {
      "not": /raw\\|inline/,
    },
    "sideEffects": true,
    "test": /\\\\\\.styl\\(us\\)\\?\\$/,
    "use": [
      {
        "loader": "<ROOT>/node_modules/<PNPM_INNER>/@rspack/core/dist/cssExtractLoader.js",
      },
      {
        "loader": "<ROOT>/packages/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 2,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "builtin:lightningcss-loader",
        "options": {
          "errorRecovery": true,
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
      },
      {
        "loader": "<ROOT>/node_modules/<PNPM_INNER>/stylus-loader/dist/cjs.js",
        "options": {
          "sourceMap": false,
        },
      },
    ],
  },
  {
    "resourceQuery": /inline/,
    "test": /\\\\\\.styl\\(us\\)\\?\\$/,
    "use": [
      {
        "loader": "<ROOT>/packages/core/compiled/css-loader/index.js",
        "options": {
          "exportType": "string",
          "importLoaders": 2,
          "modules": false,
          "sourceMap": false,
        },
      },
      {
        "loader": "builtin:lightningcss-loader",
        "options": {
          "errorRecovery": true,
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
      },
      {
        "loader": "<ROOT>/node_modules/<PNPM_INNER>/stylus-loader/dist/cjs.js",
        "options": {
          "sourceMap": false,
        },
      },
    ],
  },
  {
    "resourceQuery": /raw/,
    "test": /\\\\\\.styl\\(us\\)\\?\\$/,
    "type": "asset/source",
  },
]
`;

exports[`plugin-stylus > should allow to configure stylus options 1`] = `
[
  {
    "dependency": {
      "not": "url",
    },
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": {
      "not": /raw\\|inline/,
    },
    "sideEffects": true,
    "test": /\\\\\\.styl\\(us\\)\\?\\$/,
    "use": [
      {
        "loader": "<ROOT>/node_modules/<PNPM_INNER>/@rspack/core/dist/cssExtractLoader.js",
      },
      {
        "loader": "<ROOT>/packages/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 2,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "builtin:lightningcss-loader",
        "options": {
          "errorRecovery": true,
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
      },
      {
        "loader": "<ROOT>/node_modules/<PNPM_INNER>/stylus-loader/dist/cjs.js",
        "options": {
          "sourceMap": false,
          "stylusOptions": {
            "lineNumbers": false,
          },
        },
      },
    ],
  },
  {
    "resourceQuery": /inline/,
    "test": /\\\\\\.styl\\(us\\)\\?\\$/,
    "use": [
      {
        "loader": "<ROOT>/packages/core/compiled/css-loader/index.js",
        "options": {
          "exportType": "string",
          "importLoaders": 2,
          "modules": false,
          "sourceMap": false,
        },
      },
      {
        "loader": "builtin:lightningcss-loader",
        "options": {
          "errorRecovery": true,
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
      },
      {
        "loader": "<ROOT>/node_modules/<PNPM_INNER>/stylus-loader/dist/cjs.js",
        "options": {
          "sourceMap": false,
          "stylusOptions": {
            "lineNumbers": false,
          },
        },
      },
    ],
  },
  {
    "resourceQuery": /raw/,
    "test": /\\\\\\.styl\\(us\\)\\?\\$/,
    "type": "asset/source",
  },
]
`;
